# pick_and_place_robot

./: commands  documentation.txt
arm_controller/: CMakeLists.txt  package.xml
arm_controller/src/: gripper_control.cpp  multi_pose.cpp  pick_all.cpp  pick_blue.cpp  pick_green.cpp  pick_red.cpp  pose_srv.cpp  test_pose.cpp
robot_control_server/: package.xml  setup.cfg  setup.py
robot_control_server/robot_control_server/: controll_server.py  gripper_control.py  joint_controller.py
robot_interface/: CMakeLists.txt  package.xml
robot_interface/srv/: GripperCommand.srv
vision_pkg/: package.xml  setup.py
vision_pkg/vision_pkg/: color_object_locator.py
